SectionNavigation spacing bug fix

--- a/src/components/SectionNavigation/SectionNavigation.scss
+++ b/src/components/SectionNavigation/SectionNavigation.scss
@@ -11,7 +11,7 @@
     }
 
     &.-borderless {
-        padding-top: spacer(medium-s) 0 0 0;
+        padding: spacer(medium-s) 0 0 0;
 
         @include if-tablet {
             padding: spacer(medium-s) 0 0 0;
